# scan_folder_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
actions/: scan_folder.py
caches/: __init__.py  caches.py
keyboards/: admin_kb.py  files_kb.py
middleware/: db_middleware.py
migrations/: env.py
migrations/versions/: 53bcab4d411b_initial.py
models/: repositories.py  sessions.py  users.py
routers/: admin_panel.py  any_messages.py  scan_folder.py
settings/: settings.py
shemas/: db_schemas.py
