[project]
name = "scan-folder-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27.0",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.18.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pytz>=2026.1.post1",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C90", # mccabe
    "N",   # pep8-naming
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
